# auto-uploaders

./: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
