[project]
name = "auto-uploaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudevents>=2.2.0",
    "flask>=3.1.3",
    "google-cloud-secret-manager>=2.29.0",
    "gunicorn>=26.0.0",
    "h5py>=3.16.0",
    "nano-crucible",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[tool.uv.sources]
nano-crucible = { git = "https://github.com/MolecularFoundryCrucible/nano-crucible", rev = "dev" }
